# cs180f24-processes

./: .clang-format  CMakeLists.txt  CMakePresets.json  flake.nix
.cache/clangd/index/: PRNG.c.14159B7706EA7196.idx  PRNG.h.00C26C47E79487D2.idx  cachelist.c.911228E82D917DD7.idx  cachelist.h.1BE88DE3F3EEE2AB.idx  sample-driver.c.AF56DDE80FB1B8C5.idx
src/: child-matrix.c  gen_matrix.c  parent-matrix.c
tests/: mat16.txt  mat16_SOLUTION.txt  mat20.txt  mat20_SOLUTION.txt  mat3_SOLUTION.txt  mat50.txt  mat50_SOLUTION.txt  mat5_SOLUTION.txt
